[gd_scene load_steps=15 format=3 uid="uid://bp0f3h2k4ihdt"]

[ext_resource type="Script" uid="uid://cursserlfp0ne" path="res://player/Player.gd" id="1_5mj4t"]
[ext_resource type="Texture2D" uid="uid://jcxigboiops0" path="res://player/chicken_sheet.png" id="2_eovys"]
[ext_resource type="PackedScene" uid="uid://ct201h6wv47qp" path="res://objects/weapons/pistol/pistol.tscn" id="3_tory2"]
[ext_resource type="AudioStream" uid="uid://baiyl0p17vg0l" path="res://audio/player_damage.wav" id="4_yw30f"]
[ext_resource type="AudioStream" uid="uid://c8m5wl5yyvf2k" path="res://audio/health_pickup.wav" id="5_g6k8r"]
[ext_resource type="AudioStream" uid="uid://dfumixry0m05o" path="res://audio/xp_pickup.wav" id="6_boad6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3eadt"]
radius = 9.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tory2"]
radius = 11.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3eadt"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tory2"]
bg_color = Color(0, 1, 0.104230404, 1)

[sub_resource type="Animation" id="Animation_yw30f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChickenSheet:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(4, 5, 14, 23)]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "player_idle"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChickenSheet:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.17499995, 0.36666662, 0.56666666, 0.76666665, 0.96666664, 1.1666667, 1.3666668, 1.5999999),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(4, 5, 14, 23), Rect2(44, 29, 14, 25), Rect2(22, 29, 18, 25), Rect2(2, 29, 18, 25), Rect2(40, 55, 22, 25), Rect2(2, 29, 18, 25), Rect2(22, 29, 18, 25), Rect2(44, 29, 14, 25)]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "player_walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChickenSheet:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(4, 5, 14, 23), Rect2(24, 5, 14, 23), Rect2(4, 5, 14, 23), Rect2(44, 4, 14, 24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjkh3"]
_data = {
&"RESET": SubResource("Animation_yw30f"),
&"player_idle": SubResource("Animation_qjkh3"),
&"player_walk": SubResource("Animation_g1dw6")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_5mj4t")

[node name="ChickenSheet" type="Sprite2D" parent="."]
texture = ExtResource("2_eovys")
region_enabled = true
region_rect = Rect2(4, 5, 14, 23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_3eadt")

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource("CapsuleShape2D_tory2")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -12.0
offset_top = -18.0
offset_right = 12.0
offset_bottom = -15.0
theme_override_styles/background = SubResource("StyleBoxFlat_3eadt")
theme_override_styles/fill = SubResource("StyleBoxFlat_tory2")
value = 100.0
show_percentage = false

[node name="Pistol" parent="." instance=ExtResource("3_tory2")]

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qjkh3")
}

[node name="DamageSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_yw30f")
volume_db = -5.0

[node name="HealSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_g6k8r")

[node name="XpSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_boad6")
volume_db = -12.0
